--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,31 +2,99 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal">
+<LinearLayout
+    android:layout_weight="1"
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="8dp">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1" />
+        android:text="@string/teamA"
+        android:textAllCaps="true"
+        android:padding="4dp"
+        android:gravity="center_horizontal"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/team_a_score"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="2" />
+        android:text="0"
+        android:padding="4dp"
+        android:gravity="center_horizontal"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/team_a_3"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="3" />
+        android:text="@string/threePoints"
+        android:layout_margin="8dp"
+        android:onClick="addThreeForTeam"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/team_a_2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="4" />
+        android:text="@string/twoPoints"
+        android:layout_margin="8dp"
+        android:onClick="addTwoForTeam"/>
 
     <Button
-        android:layout_width="wrap_content"
+        android:id="@+id/team_a_1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="5" />
+        android:text="@string/freeThrow"
+        android:layout_margin="8dp"
+        android:onClick="addFreeThrowForTeam"/>
+</LinearLayout>
+    <LinearLayout
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="8dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/teamB"
+            android:textAllCaps="true"
+            android:padding="4dp"
+            android:gravity="center_horizontal"/>
+
+        <TextView
+            android:id="@+id/team_b_score"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:padding="4dp"
+            android:gravity="center_horizontal"/>
+
+        <Button
+            android:id="@+id/tem_b_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/threePoints"
+            android:layout_margin="8dp"
+            android:onClick="addThreeForTeam"/>
+
+        <Button
+            android:id="@+id/tem_b_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/twoPoints"
+            android:layout_margin="8dp"
+            android:onClick="addTwoForTeam"/>
+
+        <Button
+            android:id="@+id/tem_b_1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/freeThrow"
+            android:layout_margin="8dp"
+            android:onClick="addFreeThrowForTeam"/>
+    </LinearLayout>
 </LinearLayout>
